[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ui/Building.gd" type="Script" id=1]
[ext_resource path="res://assets/tilesBlocks.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/Ressource.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/food.png" type="Texture" id=4]
[ext_resource path="res://assets/images/stone.png" type="Texture" id=5]
[ext_resource path="res://assets/images/leaves.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]


[sub_resource type="StyleBoxFlat" id=2]


[sub_resource type="StyleBoxFlat" id=3]


[sub_resource type="StyleBoxFlat" id=4]

bg_color = Color( 0.321563, 0, 0, 0.235294 )

[sub_resource type="StyleBoxFlat" id=5]

bg_color = Color( 0, 0, 0, 0.117647 )

[node name="Buyable" type="Button"]
margin_right = 162.0
margin_bottom = 70.0
rect_min_size = Vector2( 162, 70 )
rect_pivot_offset = Vector2( 40.9565, 32.0572 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 1 )
block_tile_id = 0
costs_bamboo = 0
costs_stone = 0
costs_leaves = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 152.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 65 )

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 47.0
margin_bottom = 70.0
rect_min_size = Vector2( 47, 70 )

[node name="Sprite" type="Sprite" parent="HBoxContainer/TextureRect"]
position = Vector2( 25, 49 )
scale = Vector2( 0.44007, 0.44007 )
texture = ExtResource( 2 )
vframes = 8
hframes = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_left = 51.0
margin_right = 101.0
margin_bottom = 70.0
rect_min_size = Vector2( 50, 50 )
custom_constants/separation = 0

[node name="CostsBamboo" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 50.0
margin_bottom = 35.0
rect_min_size = Vector2( 49, 35 )
value = 0
texture = ExtResource( 4 )
do_update = false
small = true

[node name="CostsStone" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 35.0
margin_right = 50.0
rect_min_size = Vector2( 49, 35 )
value = 0
texture = ExtResource( 5 )
do_update = false
small = true

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 105.0
margin_right = 154.0
margin_bottom = 70.0

[node name="CostsLeaves" parent="HBoxContainer/CenterContainer" instance=ExtResource( 3 )]
margin_top = 17.0
margin_right = 49.0
margin_bottom = 52.0
rect_min_size = Vector2( 49, 35 )
value = 0
ressource_name = "leaves"
texture = ExtResource( 6 )
do_update = false
small = true

[connection signal="pressed" from="." to="." method="_on_pressed"]
